# buybuddy-ai

./: .claude  .claudeignore  .cursorrules  .env.example  .gitignore  CLASSIFICATION_SYSTEM_PLAN.md  CONTEXT.md  DEPLOYMENT.md  FUTURE_OBJECT_DETECTION_PLAN.md  MATCHING_IMPLEMENTATION_PLAN.md  OD_PLATFORM_TASKS.md  PLAN_LOCAL_BACKGROUND_JOBS.md  PROJECT_PLAN.md  README.md  SOTA_TEST_RESULTS.md  TASKS.md  WORKFLOW_MVP_PLAN.md  WORKFLOW_SYSTEM_PLAN.md  apply_migration.py  e2e_runpod_test.py  migration_add_last_annotated_at.py  package.json  pnpm-lock.yaml  test_on_pod.py  test_sota_api.json  test_sota_improvements.py  turbo.json
apps/api/: Dockerfile  complex_test_results.json  complex_workflow_test_results.json  fix_counts.py  pyproject.toml  real_inference_results.json  requirements.txt  run_full_extraction.py  test_cls_e2e.py  test_cls_e2e_full.py  test_data_loading_schemas.py  test_embedding_flow.py  test_inference_service.py  test_nms.py  upload_empty_slots.py
apps/api/migrations/: 003_dataset_image_count_trigger.sql  add_inference_jobs_table.sql
apps/api/scripts/: cleanup_duplicate_annotations.sql  cleanup_duplicates.py  fix_stuck_videos.py
apps/api/src/: config.py  main.py
apps/api/tests/: simple_api_test.py  test_advanced_scenarios.py  test_bulk_update.py  test_classification.py  test_complex_workflows.py  test_complex_working.py  test_job_manager.py  test_real_inference.py  test_scenarios_real_engine.py  test_workflows_api_e2e.py  test_workflows_integration.py  test_workflows_mock.py  test_workflows_real_e2e.py  workflow_api_test_results.json  (+3 more)
(+547 files in other folders)
